# leptos-ecommerce

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  db.db3
app/: Cargo.toml
app/src/: error_template.rs  inventory.rs  lib.rs
app/src/components/: card.rs  grid.rs
app/src/functions/: mod.rs
app/src/functions/inventory/: catalog.rs  mod.rs
app/src/pages/: app.rs  catalog.rs  home.rs  mod.rs
common/: Cargo.toml
common/src/: inventory.rs  lib.rs
common/src/models/: bill.rs  customer.rs  inventory.rs  mod.rs  types.rs
errors/: Cargo.toml
errors/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml  build.rs  start-docker.sh
server/migrations/: V1__initial.sql  V1_initial.sql  V2__populate_inventory.sql  V3__bill_table_takes_customer_id_then_remove_bills_column_from_customer.sql
server/src/: api.rs  fileserv.rs  main.rs  state.rs
style/: .main.scss.swp  app.scss  main.scss
style/base/: _override.scss  _utilities.scss  _variables.scss
style/components/: _alerts.scss  _avatar.scss  _badge.scss  _button.scss  _card.scss  _chart.scss  _dropdown.scss  _kanban.scss  _list.scss  _notifications.scss  _settings-drawer.scss  _space.scss  _table.scss  _tabs.scss  _timeline.scss  _widget.scss
style/form/: _checkbox.scss  _input.scss  _quill.scss  _tags.scss
style/layouts/: _dashboard-rtl.scss  _dashboard.scss  _default.scss
style/pages/: _pricing.scss  _profile.scss  _sign-in.scss  _sign-up.scss
