[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
errors = { path="../errors" }
camino = { workspace = true }
rusqlite = {workspace = true, optional=true}
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "common/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:rusqlite", "common/ssr"]

