[package]
name = "common"
description = "The common library for the leptos-ecommerce cookie store platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

errors = {path="../errors"}
derive_builder.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
cfg-if.workspace = true

 [features]
 default = []
 hydrate = ["leptos/hydrate", "leptos_router/hydrate"]
 ssr = ["errors/ssr", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

