[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
common = { path = "../common" }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
refinery = { version = "0.8.14", features = ["rusqlite", "postgres", "tokio-postgres", "serde", "enums"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
postgres = { version = "0.19.7", features = ["array-impls", "with-uuid-1"] }

[build-dependencies]
postgres = { version = "0.19.7", features = ["array-impls", "with-uuid-1"] }
log.workspace = true
refinery = { version = "0.8.14", features = ["postgres", "tokio-postgres", "serde", "enums"] }
