[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
common = { path = "../common" }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_meta = { workspace = true, features = [ "ssr" ]}
leptos_router = {workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
refinery.workspace = true
rusqlite = { workspace=true, features = ["bundled-full", "rusqlite-macros"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
